docs: miscellaneous documentation updates

--- a/todo.txt
+++ b/todo.txt
@@ -35,3 +35,7 @@ When the user chooses to exit, the program must ensure all remaining patients in
 
 Technical Requirements
 Data Structure: You must use a struct that contains the data and a next pointer.
+
+sudo apt update
+sudo apt install libcurses5-dev libcursesw5-dev
+sudo apt install libncurses-dev
